# controlPanel

./: .cproject  .gitignore  .project  CMakeLists.txt  FontsReadMe.txt  Makefile  README.md  ReadMeFonts.txt  index.md  sdkconfig
.github/workflows/: build.yml
components/lvgl/src/core/: lv_indev.c
components/lvgl/src/font/: DSEG7_classic_bold_25.c
components/lvgl_esp32_drivers/: lvgl_helpers.c  lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_tft/: disp_spi.c
components/lvgl_esp32_drivers/lvgl_touch/: touch_driver.c  touch_driver.h  xpt2046.c
main/: CMakeLists.txt  counter_conf.c  dataStorage.c  dataStorage.h  ethernet_cfg.c  frmCounter.c  frmInfo.c  frmMain.c  frmNetwork.c  frmOvenControl.c  frmProcess.c  main.c  menu.c  menu.h  menuStruct.c  network.h  process.c  tempSensor.c  text_table.c  text_table.h  ui_common.c  ui_common.h  wifi_cfg.c
